--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.12
-      - name: Install Poetry & Deps
-        run: |
-          python -m pip install poetry
-          poetry install
+          python-version: '3.9'
+          cache: 'poetry'
+      - run: poetry install
       - name: Test Coverage
         run: make coverage
       - run: PYTHONPATH=src poetry run mkdocs gh-deploy --force
