--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           python-version: '3.9'
           cache: 'poetry'
+          cache-dependency-path: pyproject.toml
       - run: poetry install
       - name: Test Coverage
         run: make coverage
